fixed off-center twitter heights and old deps

--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -138,7 +138,6 @@ body {
 
 .twitter-slides {
   position: relative;
-  min-height: 600px;
   padding: 1rem 0;
 }
 
